# p300_detector

./: README.md  ToDo.md  pyproject.toml
gui/: app.py  gui_utils.py
p300_detector/: test.py
scripts/: bluetooth_utils.py  caps.py  test.py
