[project]
name = "p300-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "niewyspany", email = "triss@tuta.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "tk",
    "brainaccess @ file:///home/coyote/Projects/BrainAccessSDK-linux/python_api"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"