[tool.poetry]
name = "p300-detector"
version = "0.1.0"
description = ""
authors = ["niewyspany <triss@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8"
tk = "*"
brainaccess = { path = "../BrainAccessSDK-linux/python_api" }
pyqt6 = "^6.8.1"
pyqtgraph = "^0.13.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
